--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+out
+out1
+варианты
+Грамота.zip
+Ракитов_утвержденная грамота.jpg
+tmp
